Migrate to new parsing system.